# MST_Parallel_Project

./: CMakeLists.txt  README.md  graphs.py  kruskal.cpp  kruskal.h  main.cpp
